# unilog

./: CMakeLists.txt  README.md  cmake.sh
cmake/: VitisCommon.cmake  config.cmake.in  vai_add_pybind11_module.cmake
include/UniLog/: ErrorCode.hpp  UniLog.hpp  UniLogExport.hpp  vitis_ai_pp.hpp
src/: CMakeLists.txt  ErrorCode.cpp
test/: test_log.cpp
